<resources>
    <string name="app_name">Crust</string>

    <string name="dashboard_activity">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="type_your_message_here"> Type your message here …</string>
    <string name="crust">Crust</string>
    <string name="remote_user">Remote User</string>
    <string name="source_ip">Source IP</string>
    <string name="server">Server</string>
    <string name="server_group">Server Group</string>
    <string name="server_statistics">Server</string>
    <string name="server_account">Server Account</string>
    <string name="remote_user_statistics">Remote User</string>
    <string name="crust_caps">CRUST</string>
    <string name="VeeraInternetAddress">VeeraSystem.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="host">Host</string>
    <string name="password">Password</string>
    <string name="otp">You will receive an OTP code via SMS shortly</string>
    <string name="login">Login</string>
    <string name="company_logo_desc">Company Logo</string>
    <string name="kill_button_text">Kill</string>
    <string name="message_button_text">Message</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="send_button_text">Send</string>
</resources>
