<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.veerasystem.crust.main.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.CardView
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#764e49"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/box4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/serverGroupsCountButton"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center|bottom"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/server_group"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#ffffff" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/box4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/serversCountButton"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center|bottom"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/server_statistics"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#ffffff" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/box4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/serverAccountsCountButton"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center|bottom"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/server_account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#ffffff" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/box4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/remoteUsersCountButton"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center|bottom"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/remote_user_statistics"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLayout"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabMode="fixed"
                app:tabTextAppearance="@style/CustomTabWidgetText" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tabs"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
